RESOLVED FIXED 65909
JavaString is not needed by V8
https://bugs.webkit.org/show_bug.cgi?id=65909
Summary JavaString is not needed by V8
Steve Block
Reported 2011-08-09 04:58:01 PDT
After http://trac.webkit.org/changeset/92659, JavaString is not used by V8. We can therefore remove the JavaScript engine-independent wrapper class and move the implementation to WebCore/bridge/jni/jsc
Attachments
Patch (15.54 KB, patch)
2011-08-09 07:24 PDT, Steve Block
no flags
Steve Block
Comment 1 2011-08-09 07:24:54 PDT
WebKit Review Bot
Comment 2 2011-08-09 11:37:02 PDT
Comment on attachment 103360 [details] Patch Clearing flags on attachment: 103360 Committed r92693: <http://trac.webkit.org/changeset/92693>
WebKit Review Bot
Comment 3 2011-08-09 11:37:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.